tests/NormalTests/paczka1/small_fuzzy/52281243.err
Error in line 1: 7vNIb S682 64,5
Error in line 7: 7vNIb A124 69,2
